--- a/package.json
+++ b/package.json
@@ -3,7 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --config webpack.config.js"
+  },
   "dependencies": {
-    "nervjs": "^1.2.15"
+    "@babel/core": "^7.0.0-beta.42",
+    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.42",
+    "@babel/preset-env": "^7.0.0-beta.42",
+    "babel-loader": "8.0.0-beta.0",
+    "html-webpack-plugin": "^3.0.6",
+    "nervjs": "^1.2.15",
+    "webpack": "^4.1.1",
+    "webpack-dev-server": "^3.1.1"
+  },
+  "devDependencies": {
+    "webpack-cli": "^2.0.12"
   }
 }
