--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.4.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
+    "dva": "^2.2.3",
     "history": "^4.7.2",
     "less": "2.3.1",
     "less-loader": "^4.1.0",
